<resources>
    <string name="app_name">Android Selection Test</string>
    <string name="x_y_z">X: 0.0\nY: 0.0\nZ: 0.0\nMod: 0.0</string>
    <string name="frequency">Frequency:</string>
    <string name="normal">Normal</string>
    <string name="ui">UI</string>
    <string name="game">Game</string>
    <string name="faster">Faster</string>
    <string name="g2">2g</string>
    <string name="g2.5">2.5g</string>
    <string name="g3">3g</string>
    <string name="threshold">Threshold:</string>
    <string name="startAcceleration">Start Acceleration</string>
    <string name="stopAcceleration">Stop Acceleration</string>
    <string name="startStepsCounter">Start Steps Counter</string>
    <string name="stopStepsCounter">Stop Steps Counter</string>
    <string name="startBluetooth">Start Bluetooth</string>
    <string name="stopBluetooth">Stop Bluetooth</string>
    <string name="startWifi">Start WiFi</string>
    <string name="stopWifi">Stop WiFi</string>
    <string name="sign_out">Sign Out</string>
    <string name="export_data">Export data</string>
    <string name="remove_data">Remove data</string>

</resources>
